# DenDo

./: .gitignore  pyproject.toml
dendo/: manage.py
dendo/dendo/: asgi.py  settings.py  urls.py  wsgi.py
dendo/dendo_activity/: apps.py
dendo/dendo_content/: apps.py
dendo/dendo_users/: admin.py  apps.py  auth_backends.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
dendo/templates/: base.html
